--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </div>
     </div>
     </main>
-    
+    <footer>
+        Juan Contreras
+    </footer>
 </body>
 <script src="index.js"></script>
 </html>
